playing around with styling

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,8 +2,9 @@
 
 // Colors
 $textColor: white;
-$featureColor: #0362fc;
-$highlightColor: #fc6f03;
+$greenColor: #0CCE6B;
+$screenBgColor: #B8F3FF;
+$bgColor: #25283D;
 
 // Breakpoints
 $tablet: 540;
