--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,8 +6,8 @@
 
 @import 'body';
 @import 'wrapper';
+@import 'header';
 @import 'nav';
 @import 'movies';
 @import 'reset';
 @import 'typography';
-// @import 'variables';
