--- a/src/styles/_homePage.scss
+++ b/src/styles/_homePage.scss
@@ -1,13 +1,6 @@
 
     .browse-by{
-        width: fit-content;
-        padding: 1rem;
-        display: flex;
-        justify-content: center;
-        flex-wrap: nowrap;
-        background-color: #25283D;
-        border-radius: 2.5rem;
-        color: white;
+        padding: 0;
         }
         li{
             list-style: none;
