--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -27,13 +27,26 @@
         margin-right: 10rem;
     }
 }
-    @media (min-width: 1100px) {
+
+@media (min-width: 1200px) {
+    h2{
+        padding: 6.5rem;
+    }
+    .about-p{
+    margin-left: 20rem;
+    margin-right: 20rem;
+    }
+
+
+}
+
+    @media (min-width: 1500px) {
         h2{
             padding: 6.5rem;
         }
         .about-p{
-        margin-left: 20rem;
-        margin-right: 20rem;
+        margin-left: 35rem;
+        margin-right: 35rem;
         }
 
 
