--- a/src/styles/_faves.scss
+++ b/src/styles/_faves.scss
@@ -19,9 +19,12 @@
         border-radius: 20px;
     }
     .link{
-        text-align: center;
-        padding-top: 20rem;
         color: #25283D;
+        margin: 0 auto;
+        padding: 5rem;
+       
+        margin: 20rem;
+         margin-top: 10rem;
         text-decoration: none;
     }
     @media (min-width: 760px) {
@@ -33,13 +36,26 @@
             margin-right: 10rem;
         }
     }
-        @media (min-width: 1100px) {
+
+    @media (min-width: 1200px) {
+        h2{
+            padding: 6.5rem;
+        }
+        .faves-p{
+        margin-left: 20rem;
+        margin-right: 20rem;
+        }
+    
+    
+    }
+
+        @media (min-width: 1500px) {
             h2{
                 padding: 6.5rem;
             }
             .faves-p{
-            margin-left: 20rem;
-            margin-right: 20rem;
+            margin-left: 35rem;
+            margin-right: 35rem;
             }
     
     
