--- a/src/styles/_homePage.scss
+++ b/src/styles/_homePage.scss
@@ -1,9 +1,20 @@
 
     .browse-by{
-        padding: 0;
+        display: flex;
+        justify-content: center;
+        background-color: #25283D;
+        padding: .5rem;
+        margin-top: 10rem;
+        margin-left: .5rem;
+        margin-right: .5rem;
+        width: 300px;
+        border-radius: 40px;
         }
-        li{
+        .facet-link{
             list-style: none;
+            padding: .2rem;
+            font-size: 9.5px;
+
             a{
                 text-decoration: none;
                 color: white;
