--- a/src/styles/_faves.scss
+++ b/src/styles/_faves.scss
@@ -1,7 +1,7 @@
 .favs-page{
     h2{
         text-align: center;
-        padding: 4rem;
+        padding: 2.8rem;
         font-weight: 700;
         font-size: 2.5rem;
         margin: 0;
@@ -18,18 +18,20 @@
         padding: 1rem;
         border-radius: 20px;
     }
-    .link{
-        color: #25283D;
-        margin: 0 auto;
-        padding: 5rem;
-       
-        margin: 20rem;
-         margin-top: 10rem;
-        text-decoration: none;
+    .link-div{
+        display: flex;
+        .link{
+            text-decoration: none;
+            color: #25283D;
+            text-align: center;
+            margin: 0 auto;
+            margin-top: 3rem;
+        }
     }
+    
     @media (min-width: 760px) {
         h2{
-            padding: 5rem;
+            padding: 4rem;
         }
         .faves-p{
             margin-left: 10rem;
@@ -39,7 +41,7 @@
 
     @media (min-width: 1200px) {
         h2{
-            padding: 6.5rem;
+            padding: 4rem;
         }
         .faves-p{
         margin-left: 20rem;
@@ -51,7 +53,7 @@
 
         @media (min-width: 1500px) {
             h2{
-                padding: 6.5rem;
+                padding: 4rem;
             }
             .faves-p{
             margin-left: 35rem;
