--- a/src/styles/_faves.scss
+++ b/src/styles/_faves.scss
@@ -26,6 +26,7 @@
             text-align: center;
             margin: 0 auto;
             margin-top: 3rem;
+            font-weight: 700;
         }
     }
     
