--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,39 +1,32 @@
 .site-nav{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    margin-right: 5.5rem;
+    margin-right: 2rem;
     .nav-ul{
-        list-style: none;
         display: flex;
-        margin: 1rem;
-        justify-content: space-between;
-    }
-    li{
-        padding: 1rem;
-        img{
-            width: 12px;
-            margin-left: 1rem;
-            padding: 0;
-        }
-        a{
+        padding: 0;
+        li{
+            list-style: none;
             color: white;
-            text-decoration: none;
-            display: block;
-            text-align: center;
-        &:visited{
-            color: white;
+            padding: 1rem;
+            a{
+                text-decoration: none;
+                &:visited{
+                    color: white;
+                }
+                &:focus{
+                    color: #0CCE6B;
+                }
+            }
+            
         }
-        &:focus{
-            color: #0CCE6B;
-        }
-        }
-        
+       
     }
 }
 
-@media (max-width: 510px) {
-    .nav-ul{
-        visibility: hidden;
-    }
+.burger-menu{
+    display: none;
+    z-index: 100;
+}
+
+@media (max-width: 720px) {
+    
 }
