added burger menu, still gotta fix up some bugs

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,10 @@
 
 
+@use './utilities/functions';
+@use './utilities/mixins';
 
 
-
-
+@import 'btn-nav';
 @import 'body';
 @import 'wrapper';
 @import 'header';
