--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,27 +1,35 @@
+@use '../styles/utilities/mixins' as *;
+@use './variables' as *;
+
 .site-nav{
-    margin-right: 2rem;
+    width: 100%;
+    // background-color: $bgColor;
+    height: 0; 
     visibility: hidden;
+    overflow: hidden;
     transition: height 0.5s ease, visibility 0s 0.5s;
 
     .show & {
         transition: height 0.5s ease, visibility 0s;
         visibility: visible;
+        z-index: 100;
         height: 254px;
     }
     .nav-ul{
-        display: flex;
-        padding: 0;
+        @include flatten($is-list: true);
+
         li{
-            list-style: none;
-            color: white;
-            padding: 1rem;
             a{
+                color: white;
                 text-decoration: none;
-                &:visited{
-                    color: white;
-                }
-                &:focus{
-                    color: #0CCE6B;
+                display: block;
+                font-size: 1.5em;
+                margin-top: 2rem;
+                font-weight: bold;
+                &:hover,
+                &:focus,
+                &:active {
+                    background-color: rgba(white, 0.2);
                 }
             }
             
@@ -39,23 +47,30 @@
             height: auto;
         }
         
-        .nav-ul {
+        .nav-ul{
             display: flex;
-        }
-
-        li {
-            flex: 1;
-        }
-
-        a {
+            justify-content: flex-end;
+            margin-right: 3rem;
             padding: 0;
-            text-align: center;
-            border-top:  none;
-            @at-root .main-nav li:not(:first-child) a {
-                border-top: none;
-                border-left: 3px solid grey;
+            li{
+                list-style: none;
+                color: white;
+                padding: 1rem;
+                a{
+                    font-weight: 400;
+                    text-decoration: none;
+                    &:visited{
+                        color: white;
+                    }
+                    &:focus{
+                        color: #0CCE6B;
+                    }
+                }
+                
             }
+           
         }
+    
 
     }
 
