--- a/src/styles/_btn-nav.scss
+++ b/src/styles/_btn-nav.scss
@@ -12,9 +12,7 @@
     @include flatten;
     border: none;
     background: none;
-    position: absolute; 
-    right: 2rem;
-   
+   margin-right: 2rem;
 
     &:hover{
         cursor: pointer;
