--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,11 +1,15 @@
 header{
     background-color: #25283D;
-    width: 100%;
+    padding: 0;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     .site-logo{
         width: 75px;
         margin-left: 2rem;
+    }
+    @media (min-width: 750px){
+            flex-wrap: nowrap;
     }
 }
