--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -6,10 +6,16 @@ header{
     flex-wrap: wrap;
     align-items: center;
     .site-logo{
-        width: 75px;
-        margin-left: 2rem;
+        width: 100px;
+        margin-left: 1.3rem;
+        position: relative;
+        top: 1.3rem;
     }
     @media (min-width: 750px){
             flex-wrap: nowrap;
+            height:80px;
+            .site-logo{
+                margin-left: 8rem;
+            }
     }
 }
