--- a/src/styles/_movies.scss
+++ b/src/styles/_movies.scss
@@ -3,10 +3,20 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    
 
     .movie-card{
         width: 200px;
         margin: 1rem;
+    }
+
+    @media (min-width: 750px) {
+        margin-right: 8rem;
+        margin-left: 8rem;
+        .movie-card{
+            width: 125px;
+        }
+        
     }
 
 }
