--- a/src/styles/_movies.scss
+++ b/src/styles/_movies.scss
@@ -1,10 +1,11 @@
+@use 'variables' as *;
+
 .movies-container{
     margin-top: 5rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     
-
     .movie-card{
         width: 200px;
         margin: 1rem;
@@ -19,4 +20,71 @@
         
     }
 
+}
+
+// Movie card styling 
+
+.movie-card{
+    .movie-info{
+        text-shadow: 4px 3px 8px rgba(37,40,61,0.81);
+        color: $greenColor;
+        position: relative;
+        text-align: center;
+        font-size: 1.5rem;
+        bottom: 1.5rem;
+    }
+    .on-hover{
+        display: none;
+    }
+
+    &:hover{
+        .movie-info{
+            display: none;
+        }
+        .movie-poster{
+            opacity: .5;
+        }
+        .on-hover{
+            display: inline-block;
+            .hover-title{
+                text-align: center;
+                text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
+                color: white;
+                position: relative;
+                font-weight: 400;
+                bottom: 17rem;
+            }
+            .hover-overview{
+                position: relative;
+                bottom: 16rem;
+                text-align: center;
+                color: white;
+                text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
+                font-weight: 400;
+                font-size: 10px;
+            }
+            .hover-link{
+                text-align: center;
+                position: relative;
+                color: white;
+                bottom: 15rem;
+                left: 4.1rem;
+                padding: .3rem;
+                font-size: 10px;
+                text-decoration: none;
+                border-radius: 40px;
+                background-color: $greenColor;
+            }
+            .hover-date{
+                text-align: center;
+                position: relative;
+                bottom: 13rem;
+                color: white;
+                text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
+                font-weight: 400;
+                font-size: 1rem;
+            }
+        }
+    }
+    
 }
