--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -1,3 +1,5 @@
+@use 'variables' as *;
+
 .about-page{
     h2{
         text-align: center;
@@ -17,6 +19,7 @@
         color: white;
         padding: 1rem;
         border-radius: 35px;
+        border: 5px solid $greenColor;
     }
     @media (min-width: 760px) {
     h2{
