--- a/src/styles/_homePage.scss
+++ b/src/styles/_homePage.scss
@@ -1,3 +1,5 @@
+@use 'variables' as *;
+
 .browse-by{
     display: flex;
     justify-content: center;
@@ -8,6 +10,7 @@
     margin: 0 auto;
     margin-top: 5rem;
     border-radius: 40px;
+    border: 3px solid $greenColor;
     
     .facet-link{
         list-style: none;
