--- a/src/styles/_movies.scss
+++ b/src/styles/_movies.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     
     .movie-card{
+        border: 3px solid ;
         width: 200px;
         margin: 1rem;
     }
@@ -22,11 +23,11 @@
 
 }
 
-// Movie card styling 
+// Movie card styling || Mobile View
 
 .movie-card{
     .movie-info{
-        text-shadow: 4px 3px 8px rgba(37,40,61,0.81);
+        text-shadow: 4px 3px 8px rgba(37,40,61, 1);
         color: $greenColor;
         position: relative;
         text-align: center;
@@ -38,17 +39,18 @@
     }
 
     &:hover{
+
         .movie-info{
             display: none;
         }
         .movie-poster{
-            opacity: .5;
+            opacity: .7;
         }
         .on-hover{
             display: inline-block;
             .hover-title{
                 text-align: center;
-                text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
+                text-shadow: 3px 2px 3px #000000;
                 color: white;
                 position: relative;
                 font-weight: 400;
@@ -86,5 +88,48 @@
             }
         }
     }
+
+    @media (min-width:750px) {
+        &:hover{
+            .hover-title{
+            font-size: 13px;
+        }
+       .hover-overview{
+           font-size: 6.5px;
+           bottom: 5rem;
+       }
+        }
+        
+        
+    }
     
 }
+// Movie card styling || Desktop View
+    // @media (min-width:750px) {
+    //     .movie-card{
+            
+
+            
+    //             &:hover{
+    //                 display: block;
+    //                 .hover-date{
+    //                     font-size: 10px;
+    //                     position: relative;
+    //                     bottom: 20rem;
+    //                 }
+    //                 .hover-link{
+    //                     position: relative;
+    //                     color: white;
+    //                     bottom: 1rem;
+    //                     right: 10rem;
+    //                     padding: .3rem;
+    //                     font-size: 10px;
+    //                     text-decoration: none;
+    //                     border-radius: 40px;
+    //                     background-color: $greenColor;
+    //                 }
+    //             }
+            
+    //     }
+        
+    // }
