--- a/src/styles/_faves.scss
+++ b/src/styles/_faves.scss
@@ -30,6 +30,7 @@
             margin: 0 auto;
             margin-top: 3rem;
             font-weight: 700;
+            margin-bottom: 5rem;
         }
     }
     
