--- a/src/styles/_movies.scss
+++ b/src/styles/_movies.scss
@@ -7,25 +7,30 @@
     justify-content: center;
     
     .movie-card{
-        border: 3px solid ;
         width: 200px;
         margin: 1rem;
+        height: 370.740px;
     }
 
     @media (min-width: 750px) {
         margin-right: 8rem;
         margin-left: 8rem;
         .movie-card{
-            width: 125px;
+            width: 140px;
         }
         
     }
+
 
 }
 
 // Movie card styling || Mobile View
 
 .movie-card{
+    .movie-poster{
+        position: relative;
+        overflow: hidden;
+    }
     .movie-info{
         text-shadow: 4px 3px 8px rgba(37,40,61, 1);
         color: $greenColor;
@@ -33,103 +38,69 @@
         text-align: center;
         font-size: 1.5rem;
         bottom: 1.5rem;
+        z-index: 100;
     }
     .on-hover{
-        display: none;
-    }
-
-    &:hover{
-
-        .movie-info{
-            display: none;
+        font-size: .7rem;
+        position: absolute;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.7);
+        text-align: center;
+        z-index: 1;
+        top: 0;
+        bottom: 0rem;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr), 1rem;
+        .hover-link{
+            color: white;
+            padding: 0;
+            font-size: 1rem;
+            text-decoration: none;
+            margin: .5rem 2rem ;
+            padding: 0;
+            background-color: $greenColor;
+            border-radius: 20px;
         }
-        .movie-poster{
-            opacity: .7;
+        .hover-title{
+            font-size: 1.3rem;
+            text-shadow:  3px 3px 7px #000000;
+            margin: 5px;
         }
-        .on-hover{
-            display: inline-block;
+        .hover-date{
+            font-size: 1rem;
+        }
+        .hover-overview{
+            margin: 10px;
+        }
+        @media (min-width:750px) {
             .hover-title{
-                text-align: center;
-                text-shadow: 3px 2px 3px #000000;
-                color: white;
-                position: relative;
-                font-weight: 400;
-                bottom: 17rem;
+                font-size: .8rem;
+                margin: 10px;
             }
             .hover-overview{
-                position: relative;
-                bottom: 16rem;
-                text-align: center;
-                color: white;
-                text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
-                font-weight: 400;
-                font-size: 10px;
+                font-size: .5rem;
             }
             .hover-link{
-                text-align: center;
-                position: relative;
-                color: white;
-                bottom: 15rem;
-                left: 4.1rem;
-                padding: .3rem;
-                font-size: 10px;
-                text-decoration: none;
-                border-radius: 40px;
-                background-color: $greenColor;
+                font-size: .6rem;
             }
             .hover-date{
-                text-align: center;
-                position: relative;
-                bottom: 13rem;
-                color: white;
-                text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
-                font-weight: 400;
-                font-size: 1rem;
+                font-size: 0.7rem;
+                padding-bottom: 2rem;
             }
         }
-    }
 
+
+    }
     @media (min-width:750px) {
-        &:hover{
-            .hover-title{
-            font-size: 13px;
-        }
-       .hover-overview{
-           font-size: 6.5px;
-           bottom: 5rem;
-       }
+        .movie-card{
+            margin: 0;
+        height: 188px;
         }
         
-        
+        .movie-info{
+            bottom: 1.3rem;
+            font-size: 1.2rem;
+        }
     }
-    
 }
-// Movie card styling || Desktop View
-    // @media (min-width:750px) {
-    //     .movie-card{
-            
-
-            
-    //             &:hover{
-    //                 display: block;
-    //                 .hover-date{
-    //                     font-size: 10px;
-    //                     position: relative;
-    //                     bottom: 20rem;
-    //                 }
-    //                 .hover-link{
-    //                     position: relative;
-    //                     color: white;
-    //                     bottom: 1rem;
-    //                     right: 10rem;
-    //                     padding: .3rem;
-    //                     font-size: 10px;
-    //                     text-decoration: none;
-    //                     border-radius: 40px;
-    //                     background-color: $greenColor;
-    //                 }
-    //             }
-            
-    //     }
-        
-    // }
