--- a/src/styles/_movies.scss
+++ b/src/styles/_movies.scss
@@ -15,9 +15,9 @@
     @media (min-width: 750px) {
         margin-right: 8rem;
         margin-left: 8rem;
-        .movie-card{
-            width: 140px;
-        }
+        // .movie-card{
+        //     width: 140px;
+        // }
         
     }
 
@@ -54,10 +54,11 @@
         grid-template-rows: repeat(2, 1fr), 1rem;
         .hover-link{
             color: white;
-            padding: 0;
+            height: 25px;
+            padding: 4px;
             font-size: 1rem;
             text-decoration: none;
-            margin: .5rem 2rem ;
+            margin: .3rem 2.5rem ;
             padding: 0;
             background-color: $greenColor;
             border-radius: 20px;
@@ -73,34 +74,36 @@
         .hover-overview{
             margin: 10px;
         }
-        @media (min-width:750px) {
-            .hover-title{
-                font-size: .8rem;
-                margin: 10px;
-            }
-            .hover-overview{
-                font-size: .5rem;
-            }
-            .hover-link{
-                font-size: .6rem;
-            }
-            .hover-date{
-                font-size: 0.7rem;
-                padding-bottom: 2rem;
-            }
-        }
-
-
-    }
-    @media (min-width:750px) {
-        .movie-card{
-            margin: 0;
-        height: 188px;
-        }
-        
-        .movie-info{
-            bottom: 1.3rem;
-            font-size: 1.2rem;
-        }
     }
 }
+//         @media (min-width:750px) {
+//             .hover-title{
+//                 font-size: .8rem;
+//                 margin: 10px;
+//             }
+//             .hover-overview{
+//                 font-size: .5rem;
+//             }
+//             .hover-link{
+//                 font-size: .6rem;
+//             }
+//             .hover-date{
+//                 font-size: 0.7rem;
+//                 padding-bottom: 2rem;
+//             }
+//         }
+
+
+//     }
+//     @media (min-width:750px) {
+//         .movie-card{
+//             margin: 0;
+//         height: 188px;
+//         }
+        
+//         .movie-info{
+//             bottom: 1.3rem;
+//             font-size: 1.2rem;
+//         }
+//     }
+// }
