--- a/src/styles/_single-movie.scss
+++ b/src/styles/_single-movie.scss
@@ -35,8 +35,22 @@
     .single-rating{
         color: $greenColor;
         font-size: 1.5rem;
-        text-align: center;
+        display: flex;
+        justify-content: center;
         text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
+        .rating-star{
+            text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
+        }
+    }
+
+    .fave-btn{
+        color: white;
+        font-size: 27px;
+        margin: 0;
+        background: none;
+        outline: none;
+        cursor: pointer;
+        padding: 0;
     }
 
     .single-movie-backdrop {
