ready to hand in

--- a/src/styles/_faves.scss
+++ b/src/styles/_faves.scss
@@ -37,6 +37,7 @@
     @media (min-width: 760px) {
         h2{
             padding: 4rem;
+            margin-bottom: 0;
         }
         .faves-p{
             margin-left: 10rem;
