--- a/src/styles/_homePage.scss
+++ b/src/styles/_homePage.scss
@@ -10,6 +10,7 @@
     margin: 0 auto;
     margin-top: 5rem;
     border-radius: 40px;
+    margin-bottom: 5rem;
     border: 3px solid $greenColor;
     
     .facet-link{
