--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;700&family=Dosis&display=swap');
+
 body{
-    font-family: 'LEMON MILK';
+    font-family: 'Cabin', sans-serif;
 }
 
