--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -7,33 +7,37 @@
     visibility: hidden;
     overflow: hidden;
     transition: height 0.5s ease, visibility 0s 0.5s;
-
+    
     .show & {
         transition: height 0.5s ease, visibility 0s;
         visibility: visible;
         z-index: 100;
-        height: 254px;
+        height: 254px; 
+        margin-bottom: 3rem;
     }
     .nav-ul{
         list-style: none;
+        padding: 0;
+        margin-top: 3rem;
+       
         display: block;
         text-align: center;
-        li{
-            
+        li{ 
             margin-bottom: 2rem;
             a{
-                margin-top: 2rem;
-                margin-right: 2rem;
                 color: white;
+                text-transform: uppercase;
                 text-decoration: none;
                 display: block;
-                font-size: 2rem;
+                font-size: 2.3rem;
                 font-weight: bold;
+                width: auto;
                 text-shadow: 2px 2px 3px #0CCE6B;
                 &:hover,
                 &:focus,
                 &:active {
-                    background-color: rgba(white, 0.2);
+                    transition: all 0.2s ease;
+                    background-color: rgba($greenColor, .8);
                 }
             }
             
