--- a/src/styles/_homePage.scss
+++ b/src/styles/_homePage.scss
@@ -43,5 +43,29 @@
 }
 
 
+// .load-more, .top-btn{
+//     font-size: 1.4rem;
+//     margin: 0 auto;
+//     display: flex;
+//     justify-content: center;
+//     width: 150px;
+// }
+.btns-div{
+    text-align: center;
+    margin-bottom: 7rem;
+    margin-top: 4rem;
+    .load-more{
+        font-size: 1.3rem;
+        margin-right: 1rem;
+        width: 130px;
+        padding: 0.5rem;
+    }
+    .top-btn{
+        font-size: 1.3rem;
+        width: 130px;
+        padding: 0.5rem;
+
+    }
+}
 
     
