--- a/src/styles/_single-movie.scss
+++ b/src/styles/_single-movie.scss
@@ -14,7 +14,6 @@
     }
 
 .single-movie-container {
- 
         position: relative;
         width: 90%;
         max-width: 700px;
@@ -33,16 +32,37 @@
 
             .single-title{
                 text-align: center;
-                font-size: 1.85rem;
+                font-size: 2rem;
                 color: white;
                 text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
             }
-            .single-date{
+            .single-tagline{
+                color: white;
                 text-align: center;
-                
-                color: white;
                 text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
+                margin-bottom: 1.4rem;
             }
+            .single-genres{
+                color: white;
+                text-align: center;
+                font-style: italic;
+                font-size: 14px;
+
+            }
+            .single-div-times{
+                display: flex;
+                justify-content: space-evenly;
+                margin-top: 1.5rem;
+                color: white;
+                font-size: 1.2rem;
+                margin-bottom: 1.5rem;
+            }
+            // .single-date{
+            //     text-align: center;
+                
+            //     color: white;
+            //     text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
+            // }
             .single-overview{
                 text-align: center;
                 color: white;
