--- a/src/styles/_fav-button.scss
+++ b/src/styles/_fav-button.scss
@@ -3,22 +3,21 @@
 
 .fav-button {
     width: 100%;
-    background: rgba(black, 0.6);
+    background: rgba($greenColor, 0.6);
     border: 1px solid $greenColor;
     border-radius: 4px;
-    color: $greenColor;
-    padding: 5px 0px;
-    margin-top: .6rem;
-    font-size: .8rem;
+    color: white;
+    height:34px;
+    text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
+    font-size: 1rem;
     cursor: pointer;
     z-index: 999;
-
-    
-    .icon {
-        padding-right: 10px;
+    .icon{
+        margin-right: 7px;
+        filter: drop-shadow();
         
     }
- 
+
 }
 
 .favourited {
