--- a/src/styles/_single-movie.scss
+++ b/src/styles/_single-movie.scss
@@ -57,30 +57,31 @@
                 font-size: 1.2rem;
                 margin-bottom: 1.5rem;
             }
-            // .single-date{
-            //     text-align: center;
-                
-            //     color: white;
-            //     text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
-            // }
             .single-overview{
                 text-align: center;
                 color: white;
                 text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
             }
-            .single-rating{
-                color: $greenColor;
-                font-size: 1.5rem;
+            .bottom-div{
                 display: flex;
-                justify-content: center;
+                align-items: center;
+                margin-top: 2rem;
+                justify-content: space-around;
+                margin-bottom: 3rem;
+                .movie-rating{
+                color: $greenColor;
                 text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
-                .rating-star{
-                    text-shadow: 4px 3px 8px rgba(0, 0, 0, 1 );
-                
+                 .empty-star{
+                    color: white;
+                }
+                .score-rating{
+                    color: white;
+                     
+                }
             }
 
-        }
-
+            }
+            
 
     img {
        width: auto;
@@ -114,11 +115,6 @@
         grid-template-columns: 1fr 1fr;
         max-width: 800px;
 
-        .fav-btn {
-            grid-column: 1/3;
-          
-        }
-
         .single-overview{
             margin-top: 2rem;
         }
@@ -127,7 +123,7 @@
         }
 
         .single-movie-poster {
-            flex: 0 0 200px;
+            // flex: 0 0 200px;
             margin-right: 20px;
         }
     }
