--- a/src/styles/_single-movie.scss
+++ b/src/styles/_single-movie.scss
@@ -43,7 +43,8 @@
                 margin-bottom: 1.4rem;
             }
             .single-genres{
-                color: white;
+                color: $greenColor;
+                text-shadow: 4px 3px 8px rgb(0, 0, 0);
                 text-align: center;
                 font-style: italic;
                 font-size: 14px;
