--- a/src/styles/_single-movie.scss
+++ b/src/styles/_single-movie.scss
@@ -55,8 +55,7 @@
                 justify-content: space-evenly;
                 margin-top: 1.5rem;
                 color: white;
-                font-size: 1.2rem;
-                margin-bottom: 1.5rem;
+                font-size: 1.2rem
             }
             .single-overview{
                 text-align: center;
@@ -89,9 +88,9 @@
     }
 
     .single-movie-info {
-
         display: flex;
         flex-direction: column;
+        margin-top: 1.7rem;
     }
 
     .single-movie-backdrop {
@@ -121,6 +120,10 @@
         }
         .single-rating{
             margin-top: 2rem;
+        }
+        .single-movie-info{
+            // margin-top: 0;
+
         }
 
         .single-movie-poster {
