Added Search Bar

--- a/src/styles/_homePage.scss
+++ b/src/styles/_homePage.scss
@@ -77,6 +77,7 @@
     }:hover{
         background-color: $greenColor;
         border: 3px solid #25283D;
+        transition: all 0.3s ease;
     }
 }
 
