--- a/src/styles/_faves.scss
+++ b/src/styles/_faves.scss
@@ -23,14 +23,24 @@
     }
     .link-div{
         display: flex;
+        margin-top: 5rem;
         .link{
             text-decoration: none;
-            color: #25283D;
+            background-color: #25283D;
+            color: white;
             text-align: center;
+            font-size: 1.3rem;
+            padding: 0.5rem;
+            border: 3px solid $greenColor;
+            border-radius: 30px;
             margin: 0 auto;
-            margin-top: 3rem;
-            font-weight: 700;
+            margin-top: 1rem;
+            font-weight: 500;
             margin-bottom: 5rem;
+        }:hover{
+            background-color: $greenColor;
+            border: 3px solid #25283D;
+            transition: all 0.3s ease;
         }
     }
     
