--- a/src/styles/_single-movie.scss
+++ b/src/styles/_single-movie.scss
@@ -4,12 +4,21 @@
         display: flex;
         .single-link{
             text-decoration: none;
-            color: #25283D;
+            background-color: #25283D;
+            color: white;
             text-align: center;
+            font-size: 1.3rem;
+            padding: 0.5rem;
+            border: 3px solid $greenColor;
+            border-radius: 30px;
             margin: 0 auto;
             margin-top: 1rem;
-            font-weight: 700;
+            font-weight: 500;
             margin-bottom: 5rem;
+        }:hover{
+            background-color: $greenColor;
+            border: 3px solid #25283D;
+            transition: all 0.3s ease;
         }
     }
 
