--- a/src/styles/_faves.scss
+++ b/src/styles/_faves.scss
@@ -20,6 +20,13 @@
         padding: 1rem;
         border-radius: 20px;
         border: 5px solid $greenColor;
+        a{
+            text-decoration: none;
+            color: $greenColor;
+        }:hover{
+            color: white;
+            cursor: pointer;
+        }
     }
     .link-div{
         display: flex;
