--- a/src/styles/_movies.scss
+++ b/src/styles/_movies.scss
@@ -11,8 +11,11 @@
     }
 
     @media (min-width: 750px) {
+        max-width: 1300px;
+        width: 90%;
         margin-right: 8rem;
         margin-left: 8rem;
+        margin: 0 auto;
         
     }
 
